--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/cropped-favicon-1-180x180.png">
+  <link rel="icon" type="image/png" href="/cropped-favicon-1-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/cropped-favicon-1-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="/cropped-favicon-1-270x270.png" sizes="270x270">
+  <link rel="mask-icon" href="/Horizontal-Light-240.png" color="#171a2b">
+  <meta name="description" content="Fast access to working capital" />
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700" />
-  <title>React Material Dashboard</title>
+  <title>Originate Capital</title>
 </head>
 
 <body>
